# openedx-admin

./: .env.example  .eslintrc.cjs  .gitignore  README.md  commitlint.config.cjs  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  vite.config.ts
assets/: index.0a66a0ca.css  index.3ed92f3c.js  index.a4f9c9b6.js
backend/: .gitignore  Cargo.toml
backend/src/: main.rs  models.rs  schema.rs
backend/src/api/: auth.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  App.tsx  RequestsWrapper.ts  config.js  index.css  types.ts  utils.ts
frontend/src/components/: AuthenticatedRoute.jsx  AuthenticatedRoute.tsx  MessageModal.tsx  NavBar.jsx  NavBar.tsx  Routes.jsx  Routes.tsx  Spinner.tsx  (+2 more)
src/: App.tsx  AuthenticationContext.tsx  RequestsWrapper.ts  config.ts  i18n.ts  index.css  index.tsx  main.tsx  pages.ts  requests.ts  types.ts  utils.ts
src/app/: index.scss  index.tsx
src/components/: AuthenticatedRoute.tsx  CheckboxList.tsx  ConfirmModal.tsx  Confirmation.tsx  MessageModal.tsx  NavBar.tsx  Routes.tsx  Spinner.scss  Spinner.tsx  UnauthenticatedRoute.tsx
src/containers/: Actions.tsx  ActivateCourse.tsx  AddRemoveStudent.tsx  AddStudent.tsx  Error.tsx  FileLinks.tsx  GetCourseStudents.tsx  GetCourses.tsx  Grades.css  Grades.tsx  Hello.tsx  Home.css  Home.tsx  LoadingPage.tsx  Login.tsx  NotAuthenticated.tsx  NotFound.tsx  ProctoringLinks.tsx  Registration.tsx  Registration2.tsx  RemoveStudent.tsx  Success.tsx
src/entities/: pages.ts
src/pages/: index.tsx  page-list.ts
src/sass/: main.scss
(+58 files in other folders)
