[package]
name = "openedx-admin-backend"
version = "0.1.0"
authors = ["dikuchan <dikuchan@yahoo.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

# JSON serialization/deserialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

# Logging.
dotenv = "0.15"
log = "0.4"
env_logger = "0.7.1"

# ORM.
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4.10", features = ["serde"] }
r2d2 = "0.8.9"